Add commands to execute Java 21